@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /* 
- * $Id: sendsize.c,v 1.171.2.2 2006/11/21 20:08:29 martinea Exp $
+ * $Id: sendsize.c,v 1.171.2.3 2006/11/24 18:10:38 martinea Exp $
  *
  * send estimated backup sizes using dump
  */
@@ -1178,13 +1178,19 @@ getsize_dump(
 	dbprintf(("%s: running \"%s%s %s - %s\"\n",
 		  debug_prefix_time(NULL), cmd, name, dumpkeys, qdevice));
 # else							/* } { */
+#  ifdef HAVE_DUMP_ESTIMATE
+#    define PARAM_DUMP_ESTIMATE HAVE_DUMP_ESTIMATE
+#  else
+#    define PARAM_DUMP_ESTIMATE ""
+#  endif
+#  ifdef HAVE_HONOR_NODUMP
+#    define PARAM_HONOR_NODUMP "h"
+#  else
+#    define PARAM_HONOR_NODUMP ""
+#  endif
 	dumpkeys = vstralloc(level_str,
-#  ifdef HAVE_DUMP_ESTIMATE				/* { */
-			     HAVE_DUMP_ESTIMATE,
-#  endif						/* } */
-#  ifdef HAVE_HONOR_NODUMP				/* { */
-			     "h",
-#  endif						/* } */
+			     PARAM_DUMP_ESTIMATE,
+			     PARAM_DUMP_ESTIMATE,
 			     "s", "f", NULL);
 
 #  ifdef HAVE_DUMP_ESTIMATE
